@@ -94,6 +94,7 @@
 	- only V3 signatures for now.
 	- wire --nodigest/--nosignature options to checksig/query/verify modes.
 	- make --addsign and --resign behave exactly the same.
+	- splint annotationsm, signature cleanup.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
